GNOME Bugzilla – Bug 668844
The "Wrong password" hint is not correctly updated
Last modified: 2012-08-23 10:12:39 UTC
Using GNOME 3.2.2: - run gnome-control-center, select the user panel - select your user - click on "***" next to to "password" - enter your current password, your new password with an extra char type, then enter your password -> an incorrect password sign is displayed - click on the first "new password" entry and delete the extra char what happens: nothing what should happen: the "incorrect password" icon should go away
Created attachment 211353 [details] [review] Check new password matching after focusing out of either entry Update the verify entry with possible validation error after focusing out both the new password entry and the verify entry. Previously the user could mistype his new password in the new password entry, but when it was corrected, the verify entry was still indicating that the confirmation password does not match despite it actually did.